--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         "
       >
         <img
-          src="assets/san agustin-modified.png"
+          src="./assets/san agustin-modified.png"
           alt="Logo Colegio San Agustín"
           style="height: 50px"
         />
