Fix HTML encoding issues in horarios.html

--- a/horarios.html
+++ b/horarios.html
@@ -135,7 +135,7 @@
           <div class="header-texto-pdf">
             <h1>Horario de Clases Académicas</h1>
             <p>
-              Año: <strong>4to Año "A"</strong> | Periodo:
+              Año: <strong>4to"A"</strong> | Periodo:
               <strong>2025-2026</strong>
             </p>
           </div>
@@ -188,3 +188,4 @@
     </script>
   </body>
 </html>
+
