--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <p>Formando líderes con valores agustinianos.</p>
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1541339907198-e08756ebafe3?w=1200" alt="Colegio">
+                <img src="./assets/instalaciones.jpg" alt="Colegio">
             </div>
         </div>
 
@@ -276,3 +276,4 @@
     </script>
 </body>
 </html>
+
